[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/gkanban/components/ListMenu.gd" type="Script" id=1]
[ext_resource path="res://addons/gkanban/components/CardButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/gkanban/assets/icons/png/close-line-white.png" type="Texture" id=3]
[ext_resource path="res://addons/gkanban/assets/icons/png/close-line.png" type="Texture" id=4]
[ext_resource path="res://addons/gkanban/components/MenuListButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/gkanban/text_resources/font_bold.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 16.0
content_margin_bottom = 24.0
bg_color = Color( 0.854902, 0.886275, 0.905882, 1 )

[sub_resource type="StyleBoxFlat" id=2]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.654902, 0.752941, 0.811765, 1 )

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.854902, 0.886275, 0.905882, 1 )

[node name="ListMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="PanelContainer" parent="."]
margin_right = 14.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 0 )
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
margin_top = 16.0
margin_right = 320.0
margin_bottom = 309.0

[node name="HBoxContainer" type="HBoxContainer" parent="BG/VBoxContainer"]
margin_right = 320.0
margin_bottom = 23.0

[node name="MarginContainer" type="MarginContainer" parent="BG/VBoxContainer/HBoxContainer"]
margin_right = 15.0
margin_bottom = 23.0
custom_constants/margin_left = 15

[node name="Label" type="Label" parent="BG/VBoxContainer/HBoxContainer"]
margin_left = 19.0
margin_right = 281.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.219608, 0.247059, 0.317647, 1 )
custom_fonts/font = ExtResource( 6 )
text = "LIST OPTIONS"
align = 1

[node name="CloseButton" parent="BG/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 285.0
margin_right = 301.0
margin_bottom = 23.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="MarginContainer2" type="MarginContainer" parent="BG/VBoxContainer/HBoxContainer"]
margin_left = 305.0
margin_right = 320.0
margin_bottom = 23.0
custom_constants/margin_right = 15

[node name="MarginContainer" type="MarginContainer" parent="BG/VBoxContainer"]
margin_top = 27.0
margin_right = 320.0
margin_bottom = 35.0
custom_constants/margin_bottom = 8

[node name="MoveToFirstButton" parent="BG/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 39.0
margin_bottom = 78.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Move To First"

[node name="MoveLeftButton" parent="BG/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 82.0
margin_bottom = 121.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Move Left"

[node name="MoveRightButton" parent="BG/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 125.0
margin_bottom = 164.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Move Right"

[node name="MoveToLast" parent="BG/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 168.0
margin_bottom = 207.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Move To Last"

[node name="Duplicate" parent="BG/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 211.0
margin_bottom = 250.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Duplicate"

[node name="Delete" parent="BG/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 254.0
margin_bottom = 293.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Delete"

[connection signal="pressed" from="BG/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/MoveToFirstButton" to="." method="_on_MoveToFirstButton_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/MoveLeftButton" to="." method="_on_MoveLeftButton_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/MoveRightButton" to="." method="_on_MoveRightButton_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/MoveToLast" to="." method="_on_MoveToLast_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/Duplicate" to="." method="_on_Duplicate_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/Delete" to="." method="_on_Delete_pressed"]
